修改基础镜像

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,4 @@
-FROM nginx:alpine
-
+FROM nginx:1.19.9-alpine
 
 RUN apk del curl
 RUN echo > /etc/apk/repositories && echo -e "https://dl-cdn.alpinelinux.org/alpine/latest-stable/main\nhttps://dl-cdn.alpinelinux.org/alpine/latest-stable/community" >> /etc/apk/repositories && apk update && apk upgrade
