--- a/mysql-server/Dockerfile
+++ b/mysql-server/Dockerfile
@@ -1,3 +1,16 @@
-FROM mysql/mysql-server:8.0.23
+FROM yobasystems/alpine:3.13.5
 
-RUN apt update && apt remove curl  && apt upgrade -y
+RUN apk add --update --no-cache mariadb mariadb-client mariadb-server-utils pwgen && \
+    rm -f /var/cache/apk/*
+
+ADD files/run.sh /scripts/run.sh
+RUN mkdir /docker-entrypoint-initdb.d && \
+    mkdir /scripts/pre-exec.d && \
+    mkdir /scripts/pre-init.d && \
+    chmod -R 755 /scripts
+
+EXPOSE 3306
+
+VOLUME ["/var/lib/mysql"]
+
+ENTRYPOINT ["/scripts/run.sh"]
