--- a/mysql-server/Dockerfile
+++ b/mysql-server/Dockerfile
@@ -1,16 +1,3 @@
-FROM yobasystems/alpine:3.13.5
+FROM mysql:8.0.24
 
-RUN apk add --update --no-cache mariadb mariadb-client mariadb-server-utils pwgen && \
-    rm -f /var/cache/apk/*
-
-ADD files/run.sh /scripts/run.sh
-RUN mkdir /docker-entrypoint-initdb.d && \
-    mkdir /scripts/pre-exec.d && \
-    mkdir /scripts/pre-init.d && \
-    chmod -R 755 /scripts
-
-EXPOSE 3306
-
-VOLUME ["/var/lib/mysql"]
-
-ENTRYPOINT ["/scripts/run.sh"]
+RUN apt update && apt upgrade -y
