--- a/mariadb/amd64/Dockerfile
+++ b/mariadb/amd64/Dockerfile
@@ -23,7 +23,7 @@ RUN apk add --no-cache mariadb mariadb-client mariadb-server-utils pwgen && \
 
 RUN rm -rf /usr/lib/libcurl* /usr/lib/libncursesw*
 
-RUN wget https://kubeoperator.oss-cn-beijing.aliyuncs.com/busybox/1.33.1/busybox.tar.gz \
+RUN wget https://kubeoperator.oss-cn-beijing.aliyuncs.com/busybox/1.33.1/amd64/busybox.tar.gz \
     && tar zxvf busybox.tar.gz -C /bin \
     && rm -rf busybox.tar.gz
 
