--- a/nginx/amd64/Dockerfile
+++ b/nginx/amd64/Dockerfile
@@ -4,7 +4,7 @@ RUN apk del curl
 
 RUN echo > /etc/apk/repositories && echo -e "https://dl-cdn.alpinelinux.org/alpine/latest-stable/main\nhttps://dl-cdn.alpinelinux.org/alpine/latest-stable/community" >> /etc/apk/repositories && apk update && apk upgrade
 
-RUN wget https://kubeoperator.oss-cn-beijing.aliyuncs.com/busybox/1.33.1/busybox.tar.gz \
+RUN wget https://kubeoperator.oss-cn-beijing.aliyuncs.com/busybox/1.33.1/amd64/busybox.tar.gz \
     && tar zxvf busybox.tar.gz -C /bin \
     && rm -rf busybox.tar.gz
 
