--- a/nginx/amd64/Dockerfile
+++ b/nginx/amd64/Dockerfile
@@ -1,7 +1,7 @@
-FROM nginx:1.19.9-alpine
+FROM nginx:1.21.6-alpine
 
 RUN apk del curl
 
-RUN echo > /etc/apk/repositories && echo -e "https://dl-cdn.alpinelinux.org/alpine/latest-stable/main\nhttps://dl-cdn.alpinelinux.org/alpine/latest-stable/community" >> /etc/apk/repositories && apk update && apk upgrade
+RUN apk update && apk upgrade
 
 RUN rm -rf /usr/lib/libpng16* /usr/lib/libncursesw* /usr/lib/libjpeg* /usr/lib/libturbojpeg*
