feat: 组件基础镜像升级

--- a/mariadb/amd64/Dockerfile
+++ b/mariadb/amd64/Dockerfile
@@ -1,17 +1,14 @@
-FROM yobasystems/alpine:3.14.0-amd64
-
-RUN apk update && apk upgrade
+FROM kubeoperator/alpine:3.15.4
 
 RUN apk add --no-cache mariadb mariadb-client mariadb-server-utils pwgen && \
-    rm -f /var/cache/apk/*
+    rm -rf /var/cache/apk/* /usr/bin/perl /usr/bin/test-connect-t /usr/bin/mariadb-embedded /usr/lib/libbrotlicommon.so.* /usr/lib/libmenuw.so.* && \
+    find / -regex '.*\.pem\|.*\.crt\|.*\.p12\|.*\.pfx\|.*\gitignore' -type f|xargs rm -rf
 
 ADD files/run.sh /scripts/run.sh
 RUN mkdir /docker-entrypoint-initdb.d && \
     mkdir /scripts/pre-exec.d && \
     mkdir /scripts/pre-init.d && \
     chmod -R 755 /scripts
-
-RUN rm -rf /usr/lib/libcurl* /usr/lib/libncursesw*
 
 EXPOSE 3306
 
